--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.2",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@eslint/json": "^0.13.2",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
     "nodemon": "^3.1.10",
+    "prettier": "3.6.2",
+    "sequelize-cli": "^6.6.3",
     "sucrase": "^3.35.0"
   },
   "scripts": {
