--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
