--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/json": "^0.13.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-json": "^4.0.1",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
     "nodemon": "^3.1.10",
