--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-jsonc": "^2.21.0",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
     "nodemon": "^3.1.10",
