--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "eslint-plugin-jsonc": "^2.21.0",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
+    "jsonc-eslint-parser": "^2.4.1",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
     "sequelize-cli": "^6.6.3",
